# HoneyBadger

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  first.hb  run.sh  test.sh
lib/: Operators.cpp  ast.cpp  ast.hpp  codegen.hpp  compiler.hpp  intrinsics.cpp  lexer.cpp  lexer.hpp  location.cpp  location.hpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  precedence_table.hpp  ref.hpp  string.hpp  token.hpp  type.hpp  visitor.hpp
lib/llvm/: codegen.hpp  optimizer.hpp
test/: CMakeLists.txt  mock_visitor.hpp  test.cpp  test_lexer.cpp  test_location.cpp  test_parser.cpp
